Removed settings editor, fixed assertions on startup, added new ini option to toggle placement z axis rotation

--- a/package/grass_general_info.ini
+++ b/package/grass_general_info.ini
@@ -19,6 +19,9 @@ fPosMin=-100
 fSclMax=1.5
 fSclMin=1
 
+;Align objects normal to the ground (good for grass, not for trees)
+bAlignObjectNormalToGround=1
+
 ;in theory, this now has an effect of over 512
 iGap=150
 
