[fix] Update documentation to add clarity

--- a/package/grass.ini
+++ b/package/grass.ini
@@ -1,5 +1,6 @@
 [GL_Grass_03]
 bPlaceGrass=1
+bAlignObjectNormalToGround=1
 bPosRand=1
 bRandClump=0
 bSclRand=1
@@ -20,6 +21,7 @@ sRecType=STAT
 sScript=
 [GL_Grass_03:ANY_NAMED_CELL]
 bPlaceGrass=0
+bAlignObjectNormalToGround=1
 bPosRand=1
 bRandClump=0
 bSclRand=0
