--- a/package/grass_cell_ref.ini
+++ b/package/grass_cell_ref.ini
@@ -1,13 +1,14 @@
-;In order of priority. So if you define a cell name, it takes precident over a region
+;In order of priority. So if you define a cell name, it takes precedent over a
+;region irrespective of the order in the file
 
 [GL_Grass_03:Balmora]
-;affects only cells with the name balmora
+;configuration for the texture id "GL_Grass_03" in the cell with the name "Balmora"
 
 [GL_Grass_03:ANY_NAMED_CELL]
-;any cell with a name
+;configuration for the texture id "GL_Grass_03" in any cell with a name
 
 [GL_Grass_03:Bitter Coast]
-;referes to the bitter coast region
+;configuration for the texture id "GL_Grass_03" in the Bitter Coast region
 
 [GL_Grass_03]
-;effects all cells
+;configuration for the texture id "GL_Grass_03" in all cells (not matched by any other rules)
