--- a/package/grass_general_info.ini
+++ b/package/grass_general_info.ini
@@ -1,44 +1,67 @@
 ;REMEMBER. Everything is case sensitive
 
 [GL_Grass_03:ANY_NAMED_CELL]
-bPlaceGrass=0
+bPlaceGrass=0 ;Set to 1 to place grass, 0 to disallow grass being placed
 
 [GL_Grass_03]
-;this (if 1) decideds on the grass mesh to use on a landtexture level, which results in clumps of grass
+;this (if 1) decides on the grass mesh to use on a landtexture level, which results in clumps of grass
 bRandClump=0
 
-;if you don't define this, there is no min hiehgt
-fMinHeight=0
-;if you don't define this, there is no max height
-;fMaxHeight=256000000
+fMinHeight=0 ;if you don't define this (comment it out), there is no min height
+fMaxHeight=256 ;if you don't define this (comment it out), there is no max height
 
+; applies a random element to the position of the grass
 bPosRand=1
-bSclRand=1
 fPosMax=100
 fPosMin=-100
+
+; enable scaling, with associated min and max scales
+bSclRand=1
 fSclMax=1.5
 fSclMin=1
 
-;Align objects normal to the ground (good for grass, not for trees)
+;When set to 1, aligns objects normal to the ground (good for grass, not for trees)
 bAlignObjectNormalToGround=1
 
-;in theory, this now has an effect of over 512
+;places a grass object every 150 units
+;this is only known to work if it is < 512 units, but there is some (untested?) logic to handle > 512
 iGap=150
 
+;=================
+; Grass types
+;=================
+
+; allows probability to add a mesh. The algorithm is:
+; - generates a random number between 0 and 100
+; - if the random number is greater than the sum of chances seen so far, pick that mesh. Otherwise
+;   move to the next mesh
+; - if no mesh is found it generates an object "UNKNOWN_GRASS"
+;
+; Note:
+; - For an unknown reason the sum of chances seen starts at 1 and not 0. This means that the first mesh has
+;   and additional 1% chance of being placed
+; - There is no validation that the chances defined in the file sum to 99 (taking into account the 1% above).
+;   chances over 99 will be ignored.
 sChance0=100
+
+;Object to used (defined in another esp). If this is blank or unset a grass object will be
+;generated using the properties below
+sID0=
+
+; mesh to use (if the sID0 is omitted/unset)
 sMesh0=v7_GS_Grass_01.nif
 
+; Object properties which apply to all generated object
+sName= ;Name of the generated object. Can be empty
+sScript= ;Script on the object. Can be empty
+sRecType=STAT ;Object type. Any value other than STAT is untested
 
-sName=
+;=================
+;Bans
+;=================
+sBan0=GL_Dirtroad ;don't place grass on this texture, even if random distribution puts it there
+iBanOff0=128 ;or for that matter within x units of it (in this case 128)
 
-;setting this to CONT is untested, and proberbly won't work yet
-sRecType=STAT
-sScript=
-sID0=
-iWeight=0
-
-;don't place grass on this texture, even if random distributaion puts it there
-sBan0=GL_Dirtroad
-
-;or for that matter witin xx units of it
-iBanOff0=128
+;Can add further bans
+sBan1=...
+iBanOff1=...
