--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         uses: johnwason/vcpkg-action@v6
         id: vcpkg
         with:
-          pkgs: wxwidgets boost-filesystem boost-algorithm
+          pkgs: wxwidgets boost-algorithm
           triplet: x64-windows-static
           token: ${{ github.token }}
           github-binarycache: true
