--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,6 @@ ENDIF()
 
 target_compile_features(MWMeshGen PRIVATE cxx_std_17)
 target_link_libraries(MWMeshGen ${wxWidgets_LIBRARIES})
+
+enable_testing()
+add_subdirectory(tst)
