[feat] Simplify configuration

--- a/package/grass_general_info.ini
+++ b/package/grass_general_info.ini
@@ -1,31 +1,37 @@
 ;REMEMBER. Everything is case sensitive
 
 [GL_Grass_03:ANY_NAMED_CELL]
-bPlaceGrass=0 ;Set to 1 to place grass, 0 to disallow grass being placed
+; Set to 0 to disallow grass being placed in the given selector
+; In this case, we stop grass being placed in a cell with a name
+bPlaceGrass=false ; Optional, default: true
 
 [GL_Grass_03]
-;this (if 1) decides on the grass mesh to use on a landtexture level, which results in clumps of grass
-bRandClump=0
+; If decides on the grass mesh to use on a landtexture level, which results in clumps of grass
+bRandClump=false ; Optional, deprecated, default: false
 
-fMinHeight=0 ;if you don't define this (comment it out), there is no min height
-fMaxHeight=256 ;if you don't define this (comment it out), there is no max height
+; Restrict the height at which meshes can be placed
+fMinHeight=0 ; Optional, default: negative infinity
+fMaxHeight=256 ; Optional, default: positive infinity
 
 ; applies a random element to the position of the grass
-bPosRand=1
-fPosMax=100
-fPosMin=-100
+; The configuration "bPosRand" will be removed in a later version
+bPosRand=true ; Optional, deprecated, default: true
+fPosMax=100 ; Optional, default: 0
+fPosMin=-100 ; Optional, default: 0
 
-; enable scaling, with associated min and max scales
-bSclRand=1
-fSclMax=1.5
-fSclMin=1
+; Assigns a random scale to the object
+; The configuration "bSclRand" will be removed in a later version
+bSclRand=true ; Optional, deprecated, default: true
+fSclMax=1.5 ; Optional, default: 1
+fSclMin=1 ; Optional, default: 1
 
 ;When set to 1, aligns objects normal to the ground (good for grass, not for trees)
-bAlignObjectNormalToGround=1
+bAlignObjectNormalToGround=true ; Optional, default true
 
-;places a grass object every 150 units
-;this is only known to work if it is < 512 units, but there is some (untested?) logic to handle > 512
-iGap=150
+; controls how often grass objects are placed
+; in this case, this places a grass object every 150 units
+; this is only known to work if it is < 512 units, but there is some (untested?) logic to handle > 512
+iGap=150 ; Required
 
 ;=================
 ; Grass types
@@ -42,7 +48,7 @@ iGap=150
 ;   and additional 1% chance of being placed
 ; - There is no validation that the chances defined in the file sum to 99 (taking into account the 1% above).
 ;   chances over 99 will be ignored.
-sChance0=100
+sChance0=100 ; Required
 
 ;Object to used (defined in another esp). If this is blank or unset a grass object will be
 ;generated using the properties below
@@ -51,17 +57,19 @@ sID0=
 ; mesh to use (if the sID0 is omitted/unset)
 sMesh0=v7_GS_Grass_01.nif
 
-; Object properties which apply to all generated object
-sName= ;Name of the generated object. Can be empty
-sScript= ;Script on the object. Can be empty
-sRecType=STAT ;Object type. Any value other than STAT is untested
+; One of sID0 OR sMesh0 must be defined (not both).
 
 ;=================
-;Bans
+; Exclusions
 ;=================
-sBan0=GL_Dirtroad ;don't place grass on this texture, even if random distribution puts it there
-iBanOff0=128 ;or for that matter within x units of it (in this case 128)
+; don't place grass on this texture, even if random distribution puts it there
+sBan0=GL_Dirtroad
 
-;Can add further bans
+; or for that matter within x units of it (in this case 128)
+; Note: This is broken and *currently* only checks if the texture is exactly this many units away
+; this will be fixed in a later version
+iBanOff0=128
+
+; Can add further bans
 sBan1=...
 iBanOff1=...
