[feat] Simplify UI by moving unused configuration to the ini

--- a/package/grass_general_info.ini
+++ b/package/grass_general_info.ini
@@ -1,5 +1,13 @@
 ;REMEMBER. Everything is case sensitive
 
+[global] ; Applies to all grass
+
+; Applies a modifier to the z (vertical) position of all generated meshes
+iZPositionModifier=10 ; Optional, default 10
+
+; Prefix of any created Static object
+sObjectPrefix=GRS_ ; Optional, deprecated, default GRS_
+
 [GL_Grass_03:ANY_NAMED_CELL]
 ; Set to 0 to disallow grass being placed in the given selector
 ; In this case, we stop grass being placed in a cell with a name
