--- a/tst/snapshots/bans/configuration.ini
+++ b/tst/snapshots/bans/configuration.ini
@@ -1,11 +1,7 @@
+; This example demonstrates not placing grass near another ground texture
+
 [Tx_BC_grass]
 fMinHeight=10
-
-fPosMax=400
-fPosMin=-400
-
-fSclMax=1.49
-fSclMin=0.87
 
 iGap=400
 
