--- a/tst/snapshots/region_exclusion/configuration.ini
+++ b/tst/snapshots/region_exclusion/configuration.ini
@@ -1,14 +1,10 @@
-[Tx_BC_grass:CellName1]
+; This example demonstrates not placing grass in a certain region
+
+[Tx_BC_grass:Region1]
 bPlaceGrass=false
 
 [Tx_BC_grass]
 fMinHeight=10
-
-fPosMax=400
-fPosMin=-400
-
-fSclMax=1.49
-fSclMin=0.87
 
 iGap=400
 
