--- a/tst/snapshots/any_named_cell_exclusion/configuration.ini
+++ b/tst/snapshots/any_named_cell_exclusion/configuration.ini
@@ -1,14 +1,10 @@
+; This example demonstrates not placing grass in any cell with a name (e.g. towns)
+
 [Tx_BC_grass:ANY_NAMED_CELL]
 bPlaceGrass=false
 
 [Tx_BC_grass]
 fMinHeight=10
-
-fPosMax=400
-fPosMin=-400
-
-fSclMax=1.49
-fSclMin=0.87
 
 iGap=400
 sChance0=100
