--- a/docs/grass_general_info.ini
+++ b/docs/grass_general_info.ini
@@ -1,6 +1,6 @@
 ;REMEMBER. Everything is case sensitive
 
-[global] ; Applies to all grass
+[global] ; Optional, special section with values that apply to all placed objects.
 
 ; Applies a modifier to the z (vertical) position of all generated meshes
 iZPositionModifier=10 ; Optional, default 10
@@ -9,7 +9,7 @@ iZPositionModifier=10 ; Optional, default 10
 sObjectPrefix=GRS_ ; Optional, deprecated, default GRS_
 
 [GL_Grass_03:ANY_NAMED_CELL]
-; Set to 0 to disallow grass being placed in the given selector
+; Set to 0 to disallow grass from being placed in the given selector
 ; In this case, we stop grass being placed in a cell with a name
 bPlaceGrass=false ; Optional, default: true
 
