--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Install mac dependencies
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
-          brew install wxwidgets boost
+          brew install wxwidgets boost spdlog
       - name: Build windows dependencies
         if: ${{ matrix.os == 'windows-latest' }}
         uses: johnwason/vcpkg-action@v6
         id: vcpkg
         with:
-          pkgs: wxwidgets boost-algorithm boost-random boost-test boost-multi-array boost-property-tree
+          pkgs: wxwidgets boost-algorithm boost-random boost-test boost-multi-array boost-property-tree spdlog
           triplet: x64-windows-static
           token: ${{ github.token }}
           github-binarycache: true
