[chore] Abstract writing esps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,19 @@ find_package(spdlog REQUIRED)
 include_directories(${MW_MESH_GEN_SOURCE_DIR}/src)
 include_directories(${MW_MESH_GEN_SOURCE_DIR}/GUI)
 include_directories(${MW_MESH_GEN_SOURCE_DIR}/es)
+include_directories(${MW_MESH_GEN_SOURCE_DIR}/esrw)
 include_directories(${MW_MESH_GEN_SOURCE_DIR}/include)
 
 FILE(GLOB es_sources ${MW_MESH_GEN_SOURCE_DIR}/es/*.cpp)
+FILE(GLOB esrs_sources ${MW_MESH_GEN_SOURCE_DIR}/GUI/*.cpp)
 FILE(GLOB sources ${MW_MESH_GEN_SOURCE_DIR}/src/*.cpp)
 FILE(GLOB gui_sources ${MW_MESH_GEN_SOURCE_DIR}/GUI/*.cpp)
 
 IF (WIN32)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-    add_executable(MWMeshGen WIN32 ${sources} ${gui_sources} ${es_sources})
+    add_executable(MWMeshGen WIN32 ${sources} ${gui_sources} ${es_sources} ${esrs_sources})
 ELSE()
-    add_executable(MWMeshGen ${sources} ${gui_sources} ${es_sources})
+    add_executable(MWMeshGen ${sources} ${gui_sources} ${es_sources} ${esrs_sources})
 ENDIF()
 
 target_compile_features(MWMeshGen PRIVATE cxx_std_20)
