[fix] Make exclusions work correctly

--- a/tst/generation_snapshots/bans/configuration.ini
+++ b/tst/generation_snapshots/bans/configuration.ini
@@ -1,12 +1,13 @@
 ; This example demonstrates not placing grass near another ground texture
 
 [Tx_BC_grass]
-fMinHeight=10
+iGap=50
 
-iGap=400
+fPosMax=400
+fPosMin=-400
 
 sChance0=100
 sMesh0=Grass\Grass_BC_1_sing.nif
 
 sBan0=Tx_BC_mainroad_01
-iBanOff0=128
+iBanOff0=512
