[fix] Change behaviour to not require probabilities to add up to 100%

--- a/docs/grass_general_info.ini
+++ b/docs/grass_general_info.ini
@@ -45,17 +45,10 @@ iGap=150 ; Required
 ; Grass types
 ;=================
 
-; allows probability to add a mesh. The algorithm is:
-; - generates a random number between 0 and 100
-; - if the random number is greater than the sum of chances seen so far, pick that mesh. Otherwise
-;   move to the next mesh
-; - if no mesh is found it generates an object "UNKNOWN_GRASS"
-;
-; Note:
-; - For an unknown reason the sum of chances seen starts at 1 and not 0. This means that the first mesh has
-;   and additional 1% chance of being placed
-; - There is no validation that the chances defined in the file sum to 99 (taking into account the 1% above).
-;   chances over 99 will be ignored.
+; The probability to add a mesh. The chance value represents the weights. So for example
+; sChance0 = 10
+; sChance1 = 20
+; Would mean that 1/3 of the time the first option is picked, and 2/3 of the time the second option is picked
 sChance0=100 ; Required
 
 ;Object to used (defined in another esp). If this is blank or unset a grass object will be
