--- a/docs/grass_general_info.ini
+++ b/docs/grass_general_info.ini
@@ -2,7 +2,8 @@
 
 [global] ; Optional, special section with values that apply to all placed objects.
 
-; Applies a modifier to the z (vertical) position of all generated meshes
+; Applies a modifier to the z (vertical) position of all generated meshes.
+; Ideally don't change this, as some tools in this program assume that this will be between 10 and 12
 iZPositionModifier=10 ; Optional, default 10
 
 ; Prefix of any created Static object
