[fix] Made bRandClump non deprecated as it is used in existing mod

--- a/docs/grass_general_info.ini
+++ b/docs/grass_general_info.ini
@@ -16,7 +16,7 @@ bPlaceGrass=false ; Optional, default: true
 
 [GL_Grass_03]
 ; If decides on the grass mesh to use on a landtexture level, which results in clumps of grass
-bRandClump=false ; Optional, deprecated, default: false
+bRandClump=false ; Optional, default: false
 
 ; Restrict the height at which meshes can be placed
 fMinHeight=0 ; Optional, default: negative infinity
