--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,16 +6,18 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ { runner: 'windows-latest', output-suffix: 'windows-x64' } ]
+        os: [
+          { runner: 'windows-latest', type: 'windows', architecture: 'x64' },
+        ]
     runs-on: ${{ matrix.os.runner }}
     steps:
       - uses: actions/checkout@v4
       - name: Install mac dependencies
-        if: ${{ matrix.os.runner == 'macos-latest' }}
+        if: ${{ matrix.os.type == 'macos' }}
         run: |
           brew install wxwidgets boost spdlog
       - name: Build windows dependencies
-        if: ${{ matrix.os.runner == 'windows-latest' }}
+        if: ${{ matrix.os.type == 'windows' }}
         uses: johnwason/vcpkg-action@v6
         id: vcpkg
         with:
@@ -29,36 +31,9 @@ jobs:
           cd build
           cmake -DCMAKE_BUILD_TYPE=Release ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} ..
           cmake --build . --config Release --target MWGroundcoverGenerator
-      - name: Make release directory, copy common artifacts
-        run: |
-          mkdir release
-          cp LICENCE.txt release/LICENCE.txt
-          cp CHANGELOG.md release/CHANGELOG.md.txt
-
-          mkdir -p release/docs/examples
-
-          cp docs/documented_configuration_example.ini release/docs/documented_configuration_example.ini
-
-          cp tst/generation_snapshots/any_named_cell_exclusion/configuration.ini release/docs/examples/any_named_cell_exclusion.ini
-          cp tst/generation_snapshots/bans/configuration.ini release/docs/examples/bans.ini
-          cp tst/generation_snapshots/cell_name_exclusion/configuration.ini release/docs/examples/cell_name_exclusion.ini
-          cp tst/generation_snapshots/region_exclusion/configuration.ini release/docs/examples/region_exclusion.ini
-
-      - run: npm i markdown-to-html-cli -g
-      - run: markdown-to-html --source README.md --output release/README.html --github-corners https://github.com/Yacoby/mw-groundcover-generator
-      - run: markdown-to-html --source docs/UserGuide.md --output release/docs/UserGuide.html --img-base64 --github-corners https://github.com/Yacoby/mw-groundcover-generator
-
-      - name: Copy windows artifacts to the release directory
-        if: ${{ matrix.os.runner == 'windows-latest' }}
-        run: |
-          cp build/Release/MWGroundcoverGenerator.exe release/MWGroundcoverGenerator.exe
-      - name: Copy macos artifacts to the release directory
-        if: ${{ matrix.os.runner == 'macos-latest' }}
-        run: |
-          cp build/MWGroundcoverGenerator release/MWGroundcoverGenerator
       - name: Upload release artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: 'mw-groundcover-generator-${{ matrix.os.output-suffix }}'
-          path: release/
+          name: 'artifacts-${{ matrix.os.type }}-${{ matrix.os.architecture }}'
+          path: build
           if-no-files-found: error
